TP-3616: fixes for more header spacing bugs

--- a/drupal/sites/all/themes/tp4/sass/page/_openpublish_article.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_openpublish_article.scss
@@ -1362,14 +1362,6 @@
     }
 }
 
-.leaderboard div {
-    margin: 0 auto;
-}
-
-.ad-large-center .leaderboard-ad {
-    width: 100% !important;
-}
-
 .ad-large-center .leaderboard-ad iframe {
     margin: 0 auto;
     display: block;
